[gd_scene load_steps=75 format=2]

[ext_resource path="res://Animation/FlyingEnemy/AttackLoop/Armature_FlyingAttackLoop_13.png" type="Texture" id=1]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_07.png" type="Texture" id=2]
[ext_resource path="res://FlyingEnemy.gd" type="Script" id=3]
[ext_resource path="res://SimpleHealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_14.png" type="Texture" id=5]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_18.png" type="Texture" id=6]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_16.png" type="Texture" id=7]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_23.png" type="Texture" id=8]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_20.png" type="Texture" id=9]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_11.png" type="Texture" id=10]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_12.png" type="Texture" id=11]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_03.png" type="Texture" id=12]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_06.png" type="Texture" id=13]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_13.png" type="Texture" id=14]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_19.png" type="Texture" id=15]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_21.png" type="Texture" id=16]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_04.png" type="Texture" id=17]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_09.png" type="Texture" id=18]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_15.png" type="Texture" id=19]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_10.png" type="Texture" id=20]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_01.png" type="Texture" id=21]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_17.png" type="Texture" id=22]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_05.png" type="Texture" id=23]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_08.png" type="Texture" id=24]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_00.png" type="Texture" id=25]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_22.png" type="Texture" id=26]
[ext_resource path="res://Animation/FlyingEnemy/Idle/Armature_DefaultFlying_02.png" type="Texture" id=27]
[ext_resource path="res://Animation/FlyingEnemy/AttackLoop/Armature_FlyingAttackLoop_04.png" type="Texture" id=28]
[ext_resource path="res://Animation/FlyingEnemy/AttackLoop/Armature_FlyingAttackLoop_14.png" type="Texture" id=29]
[ext_resource path="res://Animation/FlyingEnemy/AttackLoop/Armature_FlyingAttackLoop_11.png" type="Texture" id=30]
[ext_resource path="res://Animation/FlyingEnemy/AttackLoop/Armature_FlyingAttackLoop_12.png" type="Texture" id=31]
[ext_resource path="res://Animation/FlyingEnemy/AttackLoop/Armature_FlyingAttackLoop_07.png" type="Texture" id=32]
[ext_resource path="res://Animation/FlyingEnemy/AttackLoop/Armature_FlyingAttackLoop_15.png" type="Texture" id=33]
[ext_resource path="res://Animation/FlyingEnemy/AttackLoop/Armature_FlyingAttackLoop_03.png" type="Texture" id=34]
[ext_resource path="res://Animation/FlyingEnemy/AttackLoop/Armature_FlyingAttackLoop_06.png" type="Texture" id=35]
[ext_resource path="res://Animation/FlyingEnemy/AttackLoop/Armature_FlyingAttackLoop_05.png" type="Texture" id=36]
[ext_resource path="res://Animation/FlyingEnemy/AttackLoop/Armature_FlyingAttackLoop_02.png" type="Texture" id=37]
[ext_resource path="res://Animation/FlyingEnemy/AttackLoop/Armature_FlyingAttackLoop_08.png" type="Texture" id=38]
[ext_resource path="res://Animation/FlyingEnemy/AttackLoop/Armature_FlyingAttackLoop_09.png" type="Texture" id=39]
[ext_resource path="res://Animation/FlyingEnemy/AttackLoop/Armature_FlyingAttackLoop_10.png" type="Texture" id=40]
[ext_resource path="res://Animation/FlyingEnemy/AttackStart/Armature_FlyingAttackStart_12.png" type="Texture" id=41]
[ext_resource path="res://Animation/FlyingEnemy/AttackStart/Armature_FlyingAttackStart_13.png" type="Texture" id=42]
[ext_resource path="res://Animation/FlyingEnemy/AttackStart/Armature_FlyingAttackStart_14.png" type="Texture" id=43]
[ext_resource path="res://Animation/FlyingEnemy/AttackStart/Armature_FlyingAttackStart_15.png" type="Texture" id=44]
[ext_resource path="res://Animation/FlyingEnemy/AttackLoop/Armature_FlyingAttackLoop_00.png" type="Texture" id=45]
[ext_resource path="res://Animation/FlyingEnemy/AttackLoop/Armature_FlyingAttackLoop_01.png" type="Texture" id=46]
[ext_resource path="res://Animation/FlyingEnemy/AttackStart/Armature_FlyingAttackStart_03.png" type="Texture" id=47]
[ext_resource path="res://Animation/FlyingEnemy/AttackStart/Armature_FlyingAttackStart_06.png" type="Texture" id=48]
[ext_resource path="res://Animation/FlyingEnemy/AttackStart/Armature_FlyingAttackStart_07.png" type="Texture" id=49]
[ext_resource path="res://Animation/FlyingEnemy/AttackStart/Armature_FlyingAttackStart_08.png" type="Texture" id=50]
[ext_resource path="res://Animation/FlyingEnemy/AttackStart/Armature_FlyingAttackStart_04.png" type="Texture" id=51]
[ext_resource path="res://Animation/FlyingEnemy/AttackStart/Armature_FlyingAttackStart_09.png" type="Texture" id=52]
[ext_resource path="res://Animation/FlyingEnemy/AttackStart/Armature_FlyingAttackStart_10.png" type="Texture" id=53]
[ext_resource path="res://Animation/FlyingEnemy/AttackStart/Armature_FlyingAttackStart_02.png" type="Texture" id=54]
[ext_resource path="res://Animation/FlyingEnemy/AttackStart/Armature_FlyingAttackStart_05.png" type="Texture" id=55]
[ext_resource path="res://Animation/FlyingEnemy/AttackStart/Armature_FlyingAttackStart_01.png" type="Texture" id=56]
[ext_resource path="res://Animation/FlyingEnemy/AttackStart/Armature_FlyingAttackStart_11.png" type="Texture" id=57]
[ext_resource path="res://Animation/FlyingEnemy/AttackStart/Armature_FlyingAttackStart_00.png" type="Texture" id=58]
[ext_resource path="res://Animation/FlyingEnemy/AttackLoop/Armature_FlyingAttackLoop_16.png" type="Texture" id=59]
[ext_resource path="res://Animation/FlyingEnemy/AttackStart/Armature_FlyingAttackStart_16.png" type="Texture" id=60]
[ext_resource path="res://SFX/Enemies/Swarm_Drones4.wav" type="AudioStream" id=61]
[ext_resource path="res://VFX/vfx_EnemyHit.tscn" type="PackedScene" id=62]
[ext_resource path="res://Sprites/VFX/vfx_hurt.png" type="Texture" id=63]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 45 ), ExtResource( 46 ), ExtResource( 37 ), ExtResource( 34 ), ExtResource( 28 ), ExtResource( 36 ), ExtResource( 35 ), ExtResource( 32 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 1 ), ExtResource( 29 ), ExtResource( 33 ), ExtResource( 59 ) ],
"loop": true,
"name": "Hunt",
"speed": 22.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 21 ), ExtResource( 27 ), ExtResource( 12 ), ExtResource( 17 ), ExtResource( 23 ), ExtResource( 13 ), ExtResource( 2 ), ExtResource( 24 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 5 ), ExtResource( 19 ), ExtResource( 7 ), ExtResource( 22 ), ExtResource( 6 ), ExtResource( 15 ), ExtResource( 9 ), ExtResource( 16 ), ExtResource( 26 ), ExtResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 22.0
}, {
"frames": [ ExtResource( 58 ), ExtResource( 56 ), ExtResource( 54 ), ExtResource( 47 ), ExtResource( 51 ), ExtResource( 55 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 57 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 60 ) ],
"loop": true,
"name": "StartHunt",
"speed": 22.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 36.0

[sub_resource type="CircleShape2D" id=3]
radius = 37.0135

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HurtBox:collision_layer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HurtBox:collision_mask")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AnimatedSprite:animation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Fly" ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:collision_layer")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath(".:collision_mask")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Death:emitting")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("HealthBar:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("EnemyHit:emitting")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "die"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1800.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "set_process"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HurtBox:collision_layer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("HurtBox:collision_mask")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath(".:collision_layer")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath(".:collision_mask")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Death:emitting")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("HealthBar:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "take_damage"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HealthBar:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EnemyHit:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Gradient" id=10]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.16281, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
lifetime_randomness = 0.5
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.33
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale_random = 0.3
scale_curve = SubResource( 8 )
color = Color( 0.443137, 0, 0, 1 )
color_ramp = SubResource( 11 )

[node name="FlyingEnemy" type="KinematicBody2D" groups=["Animated", "Destructible", "Enemy", "Processing"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 3 )
move_speed = 400
touch_damage = 4
current_health = 15
max_health = 15
follow_range = 950

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "Idle"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/die = SubResource( 6 )
anims/take_damage = SubResource( 4 )

[node name="Swarm" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 61 )

[node name="Death" type="Particles2D" parent="."]
emitting = false
lifetime = 0.8
one_shot = true
explosiveness = 0.8
process_material = SubResource( 9 )
texture = ExtResource( 63 )

[node name="HealthBar" parent="." instance=ExtResource( 4 )]
visible = false
margin_left = -37.0
margin_top = -50.0
margin_right = 115.0
margin_bottom = -24.0

[node name="EnemyHit" parent="." instance=ExtResource( 62 )]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
[connection signal="body_exited" from="HurtBox" to="." method="_on_HurtBox_body_exited"]
